<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


        <ImageView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_bottom_sheet_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/separator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/hour_picker"
            app:layout_constraintEnd_toStartOf="@+id/minute_picker"
            app:layout_constraintStart_toEndOf="@+id/hour_picker"
            app:layout_constraintTop_toTopOf="@+id/hour_picker"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/seconds_picker"
            app:layout_constraintEnd_toStartOf="@+id/seconds_picker"
            app:layout_constraintStart_toEndOf="@+id/minute_picker"
            app:layout_constraintTop_toTopOf="@+id/seconds_picker"
            app:layout_constraintVertical_bias="0.45" />

        <NumberPicker
            android:id="@+id/hour_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/minute_picker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_title_container" />

        <NumberPicker
            android:id="@+id/minute_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/seconds_picker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hour_picker"
            app:layout_constraintTop_toBottomOf="@+id/timer_title_container" />

        <NumberPicker
            android:id="@+id/seconds_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/minute_picker"
            app:layout_constraintTop_toBottomOf="@+id/timer_title_container" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timer_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator">

            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/prompt_regular"
                android:id="@+id/timer_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/timer_title"
                android:inputType="text"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minute_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


