<resources>
    <string name="app_name">Timer</string>
    <string name="start">Start</string>
    <string name="timers">Timers</string>
    <string name="empty_timer_view">no created timer yet</string>
    <string name="cancel">Cancel</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="timer_creation_success">timer created successfully</string>
    <string name="timer_creation_failure">error creating timer</string>
    <string name="timer_update_success">timer updated successfully</string>
    <string name="timer_update_failure">error updating timer</string>
    <string name="timer_deletion_success">timer deleted successfully</string>
    <string name="timer_deletion_failure">failed to delete timer</string>
    <string name="error_message">error occurred with failed operation</string>
    <string name="create">create</string>
    <string name="update">update</string>
    <string name="timers_deletion_success">deleted timers successfully</string>
    <string name="timers_deletion_failure">failed to delete all timers</string>
    <string name="restart">restart</string>
    <string name="dismiss">dismiss</string>
    <string name="settings">Settings</string>
    <string name="timer_title">Timer title</string>
    <string name="theme">Theme</string>
    <string name="version">Version</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="select_theme">Select Theme</string>
    <string name="time_separator">:</string>
</resources>