...
        android:id="@+id/homeFragment"
        android:name="com.app.timerz.ui.home.HomeFragment"
        android:label="HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_activeTimerFragment"
            app:destination="@id/activeTimerFragment" />
    </fragment>

    <fragment
        android:id="@+id/timerListFragment"
        android:name="com.app.timerz.ui.timerlist.TimerListFragment"
        android:label="TimerListFragment"
        tools:layout="@layout/fragment_timer_list">
        <action
            android:id="@+id/action_timerListFragment_to_activeTimerFragment"
            app:destination="@id/activeTimerFragment" />
        <action
            android:id="@+id/action_timerListFragment_to_addTimerFragment"
            app:destination="@id/addTimerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.app.timerz.ui.settings.SettingsFragment"
        android:label="SettingsFragment"
...
