<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.timerz.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/separator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/hour_picker"
            app:layout_constraintEnd_toStartOf="@+id/minute_picker"
            app:layout_constraintStart_toEndOf="@+id/hour_picker"
            app:layout_constraintTop_toTopOf="@+id/hour_picker"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/seconds_picker"
            app:layout_constraintEnd_toStartOf="@+id/seconds_picker"
            app:layout_constraintStart_toEndOf="@+id/minute_picker"
            app:layout_constraintTop_toTopOf="@+id/seconds_picker"
            app:layout_constraintVertical_bias="0.45" />

        <NumberPicker
            android:id="@+id/hour_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/minute_picker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/minute_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/seconds_picker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hour_picker"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/seconds_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/minute_picker"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Timerz.Button"
            android:id="@+id/start_timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/start"
            android:backgroundTint="@color/color_button_disabled"
            android:enabled="@{viewModel.isTimerValueValid()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minute_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
